--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1259,6 +1259,24 @@ b, strong {
   -o-transition: color 0.5s, background-color 0.5s;
   transition: color 0.5s, background-color 0.5s;
 }
+@media (max-width: 1140px) {
+  .pagination-item-link {
+    font-size: 16px;
+    font-size: 1rem;
+    min-width: 56px;
+    height: 56px;
+    line-height: 56px;
+  }
+}
+@media (max-width: 599px) {
+  .pagination-item-link {
+    font-size: 14px;
+    font-size: 0.875rem;
+    min-width: 48px;
+    height: 48px;
+    line-height: 48px;
+  }
+}
 .pagination-item-link:hover {
   background-color: #319DAC;
   color: #FFF;
@@ -6097,6 +6115,16 @@ b, strong {
 .examples-wrapper {
   margin-bottom: 28px;
 }
+@media (max-width: 768px) {
+  .examples-wrapper {
+    margin-bottom: 18px;
+  }
+}
+@media (max-width: 599px) {
+  .examples-wrapper {
+    margin-bottom: 12px;
+  }
+}
 .examples-wrapper.aside {
   margin-bottom: 0;
 }
@@ -6271,10 +6299,6 @@ b, strong {
   font-weight: 400;
   letter-spacing: 0.03rem;
   margin-bottom: 4px;
-  overflow: hidden;
-  -o-text-overflow: ellipsis;
-     text-overflow: ellipsis;
-  white-space: nowrap;
   width: 100%;
 }
 @media (max-width: 480px) {
@@ -6293,10 +6317,6 @@ b, strong {
   font-weight: 600;
   line-height: 1;
   letter-spacing: 0.03rem;
-  overflow: hidden;
-  -o-text-overflow: ellipsis;
-     text-overflow: ellipsis;
-  white-space: nowrap;
   width: 100%;
 }
 @media (max-width: 480px) {
