--- a/src/sass/_ui.scss
+++ b/src/sass/_ui.scss
@@ -717,6 +717,21 @@ b, strong {
 			padding-right: 6px;
 			border-radius: 50%;
 			transition: color 0.5s, background-color 0.5s;
+
+			@media (max-width: 1140px) {
+				@include fz(16); 
+				min-width: 56px;
+				height: 56px;
+				line-height: 56px;	
+			}
+
+			@media (max-width: 599px) {
+				@include fz(14); 
+				min-width: 48px;
+				height: 48px;
+				line-height: 48px;	
+			}
+
 			&:hover {
 				background-color: $primary;
 				color: #FFF;
